Package_Tools/cairo/package/cairo.pas


procedure cairo_surface_get_mime_data(surface: Pcairo_surface_t; mime_type: PChar; Data: PPbyte; length: Pdword); cdecl; external cairo_lib;
function cairo_surface_set_mime_data(surface: Pcairo_surface_t; mime_type: PChar; Data: pbyte; length: dword; Destroy: Tcairo_destroy_func_t; closure: pointer): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_surface_supports_mime_type(surface: Pcairo_surface_t; mime_type: PChar): Tcairo_bool_t; cdecl; external cairo_lib;
procedure cairo_surface_get_font_options(surface: Pcairo_surface_t; options: Pcairo_font_options_t); cdecl; external cairo_lib;
procedure cairo_surface_flush(surface: Pcairo_surface_t); cdecl; external cairo_lib;
procedure cairo_surface_mark_dirty(surface: Pcairo_surface_t); cdecl; external cairo_lib;
procedure cairo_surface_mark_dirty_rectangle(surface: Pcairo_surface_t; x: longint; y: longint; Width: longint; Height: longint); cdecl; external cairo_lib;
procedure cairo_surface_set_device_scale(surface: Pcairo_surface_t; x_scale: Tdouble; y_scale: Tdouble); cdecl; external cairo_lib;
procedure cairo_surface_get_device_scale(surface: Pcairo_surface_t; x_scale: Pdouble; y_scale: Pdouble); cdecl; external cairo_lib;
procedure cairo_surface_set_device_offset(surface: Pcairo_surface_t; x_offset: Tdouble; y_offset: Tdouble); cdecl; external cairo_lib;
procedure cairo_surface_get_device_offset(surface: Pcairo_surface_t; x_offset: Pdouble; y_offset: Pdouble); cdecl; external cairo_lib;
procedure cairo_surface_set_fallback_resolution(surface: Pcairo_surface_t; x_pixels_per_inch: Tdouble; y_pixels_per_inch: Tdouble); cdecl; external cairo_lib;
procedure cairo_surface_get_fallback_resolution(surface: Pcairo_surface_t; x_pixels_per_inch: Pdouble; y_pixels_per_inch: Pdouble); cdecl; external cairo_lib;
procedure cairo_surface_copy_page(surface: Pcairo_surface_t); cdecl; external cairo_lib;
procedure cairo_surface_show_page(surface: Pcairo_surface_t); cdecl; external cairo_lib;
function cairo_surface_has_show_text_glyphs(surface: Pcairo_surface_t): Tcairo_bool_t; cdecl; external cairo_lib;
function cairo_image_surface_create(format: Tcairo_format_t; Width: longint; Height: longint): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_format_stride_for_width(format: Tcairo_format_t; Width: longint): longint; cdecl; external cairo_lib;
function cairo_image_surface_create_for_data(Data: pbyte; format: Tcairo_format_t; Width: longint; Height: longint; stride: longint): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_image_surface_get_data(surface: Pcairo_surface_t): pbyte; cdecl; external cairo_lib;
function cairo_image_surface_get_format(surface: Pcairo_surface_t): Tcairo_format_t; cdecl; external cairo_lib;
function cairo_image_surface_get_width(surface: Pcairo_surface_t): longint; cdecl; external cairo_lib;
function cairo_image_surface_get_height(surface: Pcairo_surface_t): longint; cdecl; external cairo_lib;
function cairo_image_surface_get_stride(surface: Pcairo_surface_t): longint; cdecl; external cairo_lib;
function cairo_image_surface_create_from_png(filename: PChar): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_image_surface_create_from_png_stream(read_func: Tcairo_read_func_t; closure: pointer): Pcairo_surface_t; cdecl; external cairo_lib;
function cairo_recording_surface_create(content: Tcairo_content_t; extents: Pcairo_rectangle_t): Pcairo_surface_t; cdecl; external cairo_lib;
procedure cairo_recording_surface_ink_extents(surface: Pcairo_surface_t; x0: Pdouble; y0: Pdouble; Width: Pdouble; Height: Pdouble); cdecl; external cairo_lib;
function cairo_recording_surface_get_extents(surface: Pcairo_surface_t; extents: Pcairo_rectangle_t): Tcairo_bool_t; cdecl; external cairo_lib;

type
  Pcairo_raster_source_acquire_func_t = ^Tcairo_raster_source_acquire_func_t;
  Tcairo_raster_source_acquire_func_t = function(pattern: Pcairo_pattern_t; callback_data: pointer; target: Pcairo_surface_t; extents: Pcairo_rectangle_int_t): Pcairo_surface_t; cdecl;
  Tcairo_raster_source_release_func_t = procedure(pattern: Pcairo_pattern_t; callback_data: pointer; surface: Pcairo_surface_t); cdecl;
  Pcairo_raster_source_release_func_t = ^Tcairo_raster_source_release_func_t;
  Tcairo_raster_source_snapshot_func_t = function(pattern: Pcairo_pattern_t; callback_data: pointer): Tcairo_status_t; cdecl;
  Tcairo_raster_source_copy_func_t = function(pattern: Pcairo_pattern_t; callback_data: pointer; other: Pcairo_pattern_t): Tcairo_status_t; cdecl;
  Tcairo_raster_source_finish_func_t = procedure(pattern: Pcairo_pattern_t; callback_data: pointer); cdecl;

function cairo_pattern_create_raster_source(user_data: pointer; content: Tcairo_content_t; Width: longint; Height: longint): Pcairo_pattern_t; cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_set_callback_data(pattern: Pcairo_pattern_t; Data: pointer); cdecl; external cairo_lib;
function cairo_raster_source_pattern_get_callback_data(pattern: Pcairo_pattern_t): pointer; cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_set_acquire(pattern: Pcairo_pattern_t; acquire: Tcairo_raster_source_acquire_func_t; Release: Tcairo_raster_source_release_func_t); cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_get_acquire(pattern: Pcairo_pattern_t; acquire: Pcairo_raster_source_acquire_func_t; Release: Pcairo_raster_source_release_func_t); cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_set_snapshot(pattern: Pcairo_pattern_t; snapshot: Tcairo_raster_source_snapshot_func_t); cdecl; external cairo_lib;
function cairo_raster_source_pattern_get_snapshot(pattern: Pcairo_pattern_t): Tcairo_raster_source_snapshot_func_t; cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_set_copy(pattern: Pcairo_pattern_t; copy: Tcairo_raster_source_copy_func_t); cdecl; external cairo_lib;
function cairo_raster_source_pattern_get_copy(pattern: Pcairo_pattern_t): Tcairo_raster_source_copy_func_t; cdecl; external cairo_lib;
procedure cairo_raster_source_pattern_set_finish(pattern: Pcairo_pattern_t; finish: Tcairo_raster_source_finish_func_t); cdecl; external cairo_lib;
function cairo_raster_source_pattern_get_finish(pattern: Pcairo_pattern_t): Tcairo_raster_source_finish_func_t; cdecl; external cairo_lib;
function cairo_pattern_create_rgb(red: Tdouble; green: Tdouble; blue: Tdouble): Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_create_rgba(red: Tdouble; green: Tdouble; blue: Tdouble; alpha: Tdouble): Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_create_for_surface(surface: Pcairo_surface_t): Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_create_linear(x0: Tdouble; y0: Tdouble; x1: Tdouble; y1: Tdouble): Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_create_radial(cx0: Tdouble; cy0: Tdouble; radius0: Tdouble; cx1: Tdouble; cy1: Tdouble;
  radius1: Tdouble): Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_create_mesh: Pcairo_pattern_t; cdecl; external cairo_lib;
function cairo_pattern_reference(pattern: Pcairo_pattern_t): Pcairo_pattern_t; cdecl; external cairo_lib;
procedure cairo_pattern_destroy(pattern: Pcairo_pattern_t); cdecl; external cairo_lib;
function cairo_pattern_get_reference_count(pattern: Pcairo_pattern_t): dword; cdecl; external cairo_lib;
function cairo_pattern_status(pattern: Pcairo_pattern_t): Tcairo_status_t; cdecl; external cairo_lib;
function cairo_pattern_get_user_data(pattern: Pcairo_pattern_t; key: Pcairo_user_data_key_t): pointer; cdecl; external cairo_lib;
function cairo_pattern_set_user_data(pattern: Pcairo_pattern_t; key: Pcairo_user_data_key_t; user_data: pointer; Destroy: Tcairo_destroy_func_t): Tcairo_status_t; cdecl; external cairo_lib;

type
  Pcairo_pattern_type = ^Tcairo_pattern_type;
  Tcairo_pattern_type = longint;

const
  CAIRO_PATTERN_TYPE_SOLID = 0;
  CAIRO_PATTERN_TYPE_SURFACE = 1;
  CAIRO_PATTERN_TYPE_LINEAR = 2;
  CAIRO_PATTERN_TYPE_RADIAL = 3;
  CAIRO_PATTERN_TYPE_MESH = 4;
  CAIRO_PATTERN_TYPE_RASTER_SOURCE = 5;

type
  Tcairo_pattern_type_t = Tcairo_pattern_type;
  Pcairo_pattern_type_t = ^Tcairo_pattern_type_t;

function cairo_pattern_get_type(pattern: Pcairo_pattern_t): Tcairo_pattern_type_t; cdecl; external cairo_lib;
procedure cairo_pattern_add_color_stop_rgb(pattern: Pcairo_pattern_t; offset: Tdouble; red: Tdouble; green: Tdouble; blue: Tdouble); cdecl; external cairo_lib;
procedure cairo_pattern_add_color_stop_rgba(pattern: Pcairo_pattern_t; offset: Tdouble; red: Tdouble; green: Tdouble; blue: Tdouble;
  alpha: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_begin_patch(pattern: Pcairo_pattern_t); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_end_patch(pattern: Pcairo_pattern_t); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_curve_to(pattern: Pcairo_pattern_t; x1: Tdouble; y1: Tdouble; x2: Tdouble; y2: Tdouble;
  x3: Tdouble; y3: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_line_to(pattern: Pcairo_pattern_t; x: Tdouble; y: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_move_to(pattern: Pcairo_pattern_t; x: Tdouble; y: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_set_control_point(pattern: Pcairo_pattern_t; point_num: dword; x: Tdouble; y: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_set_corner_color_rgb(pattern: Pcairo_pattern_t; corner_num: dword; red: Tdouble; green: Tdouble; blue: Tdouble); cdecl; external cairo_lib;
procedure cairo_mesh_pattern_set_corner_color_rgba(pattern: Pcairo_pattern_t; corner_num: dword; red: Tdouble; green: Tdouble; blue: Tdouble;
  alpha: Tdouble); cdecl; external cairo_lib;
procedure cairo_pattern_set_matrix(pattern: Pcairo_pattern_t; matrix: Pcairo_matrix_t); cdecl; external cairo_lib;
procedure cairo_pattern_get_matrix(pattern: Pcairo_pattern_t; matrix: Pcairo_matrix_t); cdecl; external cairo_lib;

type
  Pcairo_extend = ^Tcairo_extend;
  Tcairo_extend = longint;

const
  CAIRO_EXTEND_NONE = 0;
  CAIRO_EXTEND_REPEAT = 1;
  CAIRO_EXTEND_REFLECT = 2;
  CAIRO_EXTEND_PAD = 3;

type
  Tcairo_extend_t = Tcairo_extend;
  Pcairo_extend_t = ^Tcairo_extend_t;

procedure cairo_pattern_set_extend(pattern: Pcairo_pattern_t; extend: Tcairo_extend_t); cdecl; external cairo_lib;
function cairo_pattern_get_extend(pattern: Pcairo_pattern_t): Tcairo_extend_t; cdecl; external cairo_lib;

type
  Pcairo_filter = ^Tcairo_filter;
  Tcairo_filter = longint;

const
  CAIRO_FILTER_FAST = 0;
  CAIRO_FILTER_GOOD = 1;
  CAIRO_FILTER_BEST = 2;
  CAIRO_FILTER_NEAREST = 3;
  CAIRO_FILTER_BILINEAR = 4;
  CAIRO_FILTER_GAUSSIAN = 5;

type
  Tcairo_filter_t = Tcairo_filter;
  Pcairo_filter_t = ^Tcairo_filter_t;
